--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "promises-playground",
-  "description": "promise API Playground"
+  "license": "MIT",
+  "main": "index.js",
+  "repository": "https://github.com/impl21/promises-playground",
+  "description": "promise API Playground",
   "devDependencies": {
     "babel-core": "6.7.2",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
-    "npm": "3.8.1",
+    "html-webpack-plugin": "2.9.0",
+    "http-server": "0.8.5",
+    "install": "0.5.6",
+    "ip": "^1.1.2",
     "lodash": "4.6.1",
+    "npm": "3.8.1",
     "webpack": "1.12.14",
     "webpack-config": "4.0.0",
     "webpack-dev-server": "1.14.1"
+  },
+  "scripts": {
+    "start": "webpack-dev-server --inline --content-base --progress --colors ."
   }
 }
